SCRUM126 Update a issue
